--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
     <meta content="At Champion Investment Consult, we believe that sustainable investing is not only a moral imperative but also a sound business strategy. Our core focus areas are designed to drive positive impact, generate long-term value, and create a better future for all." name="description">
 
     <!-- Favicon -->
-    <link href="img/logo (2).png" rel="icon">
+    <link href="img/logo3.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 class="mb-0">
-                <img src="img/logo (2).png" alt="Logo" class="nav-logo" style="height: 80px;">
+                <img src="img/logo3.png" alt="Logo" class="nav-logo" style="height: 80px;">
             </h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -81,100 +81,101 @@
     <!-- Page Header End -->
 
 
-      <!-- Service Start -->
-      <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block bg-secondary text-primary py-1 px-4">Core Focus Areas </p>
-                <h1 class="text-uppercase">What We Provide</h1>
-            </div>
-            <div class="container-xxl py-5">
-                <div class="container">
-                    
-                    <div class="row g-4">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Agriculture: Champion Farms</h3>
-                                <p>Champion Farms promotes eco-friendly farming practices, improves crop yields, and enhances rural livelihoods. We invest in:</p>
-                                <ul>
-                                    <li>Organic farming</li>
-                                    <li>Regenerative agriculture</li>
-                                    <li>Precision farming</li>
-                                    <li>Rural development projects</li>
-                                </ul>
-                            </div>
+          <!-- Service Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <p class="d-inline-block bg-secondary text-primary py-1 px-4">Core Focus Areas </p>
+            <h1 class="text-uppercase">What We Provide</h1>
+        </div>
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/1000_F_567585816_nsef7D6l3G8CZSMJe0kb0M4WXlDTcJV0.jpg" alt="Sustainable Agriculture" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Agriculture: Champion Farms</h3>
+                            <p>Champion Farms promotes eco-friendly farming practices, improves crop yields, and enhances rural livelihoods. We invest in:</p>
+                            <ul>
+                                <li>Organic farming</li>
+                                <li>Regenerative agriculture</li>
+                                <li>Precision farming</li>
+                                <li>Rural development projects</li>
+                            </ul>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Housing: Champion Realty</h3>
-                                <p>Champion Realty develops eco-friendly, affordable, and inclusive housing solutions. We invest in:</p>
-                                <ul>
-                                    <li>Green building technologies</li>
-                                    <li>Energy-efficient housing</li>
-                                    <li>Affordable housing projects</li>
-                                    <li>Community land trusts</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/eco-house.jpg" alt="Sustainable Housing" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Housing: Champion Realty</h3>
+                            <p>Champion Realty develops eco-friendly, affordable, and inclusive housing solutions. We invest in:</p>
+                            <ul>
+                                <li>Green building technologies</li>
+                                <li>Energy-efficient housing</li>
+                                <li>Affordable housing projects</li>
+                                <li>Community land trusts</li>
+                            </ul>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Energy: Champion Energy</h3>
-                                <p>Champion Energy promotes renewable energy, reduces carbon emissions, and mitigates climate change. We invest in:</p>
-                                <ul>
-                                    <li>Solar energy</li>
-                                    <li>Wind energy</li>
-                                    <li>Hydro energy</li>
-                                    <li>Energy storage solutions</li>
-                                    <li>Carbon offset projects</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/th.jpeg" alt="Sustainable Energy" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Energy: Champion Energy</h3>
+                            <p>Champion Energy promotes renewable energy, reduces carbon emissions, and mitigates climate change. We invest in:</p>
+                            <ul>
+                                <li>Solar energy</li>
+                                <li>Wind energy</li>
+                                <li>Hydro energy</li>
+                                <li>Energy storage solutions</li>
+                                <li>Carbon offset projects</li>
+                            </ul>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Sports: Champion Sports</h3>
-                                <p>Champion Sports supports sports development, healthy lifestyles, and community engagement. We invest in:</p>
-                                <ul>
-                                    <li>Sports infrastructure development</li>
-                                    <li>Youth sports programs</li>
-                                    <li>Community sports initiatives</li>
-                                    <li>Sustainable sports technologies</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/Sustainability-football.jpg" alt="Sustainable Sports" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Sports: Champion Sports</h3>
+                            <p>Champion Sports supports sports development, healthy lifestyles, and community engagement. We invest in:</p>
+                            <ul>
+                                <li>Sports infrastructure development</li>
+                                <li>Youth sports programs</li>
+                                <li>Community sports initiatives</li>
+                                <li>Sustainable sports technologies</li>
+                            </ul>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Entertainment: Champion Entertainment</h3>
-                                <p>Champion Entertainment promotes creative industries, cultural development, and social impact. We invest in:</p>
-                                <ul>
-                                    <li>Film and television production</li>
-                                    <li>Music and arts development</li>
-                                    <li>Cultural festivals and events</li>
-                                    <li>Social impact entertainment projects</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/greenevent.jpg" alt="Sustainable Entertainment" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Entertainment: Champion Entertainment</h3>
+                            <p>Champion Entertainment promotes creative industries, cultural development, and social impact. We invest in:</p>
+                            <ul>
+                                <li>Film and television production</li>
+                                <li>Music and arts development</li>
+                                <li>Cultural festivals and events</li>
+                                <li>Social impact entertainment projects</li>
+                            </ul>
                         </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="bg-secondary p-4">
-                                <h3 class="text-uppercase mb-3">Sustainable Community: Champion Community Investment</h3>
-                                <p>Champion Community Investment promotes community development, social justice, and human rights, aligned with UN SDGs. We invest in:</p>
-                                <ul>
-                                    <li>Community development projects</li>
-                                    <li>Social enterprises</li>
-                                    <li>Human rights initiatives</li>
-                                    <li>Education and healthcare programs</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="bg-secondary p-4 text-center">
+                            <img src="img/Sustainable-Community-Development - Copy.png" alt="Sustainable Community" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <h3 class="text-uppercase mb-3">Sustainable Community: Champion investment Community </h3>
+                            <p>Champion Community Investment promotes community development, social justice, and human rights, aligned with UN SDGs. We invest in:</p>
+                            <ul>
+                                <li>Community development projects</li>
+                                <li>Social enterprises</li>
+                                <li>Human rights initiatives</li>
+                                <li>Education and healthcare programs</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            
         </div>
     </div>
-    <!-- Service End -->
-
-
-   
-
+</div>
+<!-- Service End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
