--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta content="At Champion Investment Consult, we believe that sustainable investing is not only a moral imperative but also a sound business strategy. Our core focus areas are designed to drive positive impact, generate long-term value, and create a better future for all." name="description">
 
     <!-- Favicon -->
-    <link href="img/logo (2).png" rel="icon">
+    <link href="img/logo3.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 class="mb-0">
-                <img src="img/logo (2).png" alt="Logo" class="nav-logo" style="height: 80px;">
+                <img src="img/logo3.png" alt="Logo" class="nav-logo" style="height: 80px;">
             </h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -94,8 +94,8 @@
         <div class="row g-0">
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                 <div class="bg-secondary p-5">
-                    <p class="d-inline-block bg-dark text-primary py-1 px-4">Contact Us</p>
-                    <h1 class="text-uppercase mb-4">Have Any Query? Please Contact Us!</h1>
+                    <p class="d-inline-block bg-dark text-primary py-1 px-4">Join Us</p>
+                    <h1 class="text-uppercase mb-4">Please Contact Us!</h1>
 
                     <form id="contactForm">
                         <div class="row g-3">
