--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta content="At Champion Investment Consult, we believe that sustainable investing is not only a moral imperative but also a sound business strategy. Our core focus areas are designed to drive positive impact, generate long-term value, and create a better future for all." name="description">
 
     <!-- Favicon -->
-    <link href="img/logo (2).png" rel="icon">
+    <link href="img/logo3.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 class="mb-0">
-                <img src="img/logo (2).png" alt="Logo" class="nav-logo" style="height: 80px;">
+                <img src="img/logo3.png" alt="Logo" class="nav-logo" style="height: 80px;">
             </h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
