--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6">
                         <div class="bg-secondary p-4 text-center">
-                            <img src="img/1000_F_567585816_nsef7D6l3G8CZSMJe0kb0M4WXlDTcJV0.jpg" alt="Sustainable Agriculture" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
+                            <img src="img/farm.jpeg" alt="Sustainable Agriculture" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
                             <h3 class="text-uppercase mb-3">Sustainable Agriculture: Champion Farms</h3>
                             <p>Champion Farms promotes eco-friendly farming practices, improves crop yields, and enhances rural livelihoods. We invest in:</p>
                             <ul>
@@ -221,7 +221,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="bg-secondary p-4 text-center">
                             <img src="img/Sustainable-Community-Development - Copy.png" alt="Sustainable Community" class="img-fluid mb-3" style="width:100%; height:200px; object-fit:cover;">
-                            <h3 class="text-uppercase mb-3">Sustainable Community: Champion investment Community </h3>
+                            <h3 class="text-uppercase mb-3">Sustainable Community: Champion Community Investment</h3>
                             <p>Champion Community Investment promotes community development, social justice, and human rights, aligned with UN SDGs. We invest in:</p>
                             <ul>
                                 <li>Community development projects</li>
