--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <img class="img-fluid h-100" src="img/office.jpg" alt="Champion Investment Consult">
+                        <img class="img-fluid h-100" src="img/bg3.jpeg" alt="Champion Investment Consult">
                     </div>
                 </div>
             </div>
